日本の国名日本語化

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -920,8 +920,6 @@
  JAP_fascism_DEF: "大日本帝国"
  JAP_democratic: "大日本帝国"
  JAP_democratic_DEF: "大日本帝国"
- JAP_conservatism: "大日本帝国"
- JAP_conservatism_DEF: "大日本帝国"
  JAP_neutrality: "大日本帝国"
  JAP_neutrality_DEF: "大日本帝国"
  JAP_communism: "日本人民共和国"
@@ -936,6 +934,8 @@
  JAP_ADJ: "日本"
  JAP_subject: "$OVERLORDADJ$領$JAP$"
  JAP_subject_DEF: "$OVERLORDADJ$領$JAP$"
+ JAP_conservatism: "大日本帝国"
+ JAP_conservatism_DEF: "大日本帝国"
  MEX_fascism: "軍政メキシコ"
  MEX_fascism_DEF: "軍政メキシコ"
  MEX_democratic: "メキシコ合衆国"
@@ -4565,9 +4565,9 @@
  JAM_socialism: "Jamaica"
  JAM_socialism_ADJ: "Jamaican"
  JAM_socialism_DEF: "Socialist Republic of Jamaica"
- JAP_socialism: "Japan"
- JAP_socialism_ADJ: "Japanese"
- JAP_socialism_DEF: "Socialist Republic of Japan"
+ JAP_socialism: "日本共和国"
+ JAP_socialism_ADJ: "日本"
+ JAP_socialism_DEF: "日本社会主義共和国"
  JOR_socialism: "Jordan"
  JOR_socialism_ADJ: "Jordanian"
  JOR_socialism_DEF: "Socialist Republic of Jordan"
@@ -5218,9 +5218,9 @@
  JAM_socialdemocratic: "Jamaica"
  JAM_socialdemocratic_ADJ: "Jamaican"
  JAM_socialdemocratic_DEF: "Republic of Jamaica"
- JAP_socialdemocratic: "Japan"
- JAP_socialdemocratic_ADJ: "Japanese"
- JAP_socialdemocratic_DEF: "Republic of Japan"
+ JAP_socialdemocratic: "大日本帝国"
+ JAP_socialdemocratic_ADJ: "大日本帝国"
+ JAP_socialdemocratic_DEF: "大日本帝国"
  JOR_socialdemocratic: "Jordan"
  JOR_socialdemocratic_ADJ: "Jordanian"
  JOR_socialdemocratic_DEF: "Republic of Jordan"
@@ -5871,9 +5871,9 @@
  JAM_conservatism: "Jamaica"
  JAM_conservatism_ADJ: "Jamaican"
  JAM_conservatism_DEF: "Republic of Jamaica"
- JAP_conservatism: "Japan"
- JAP_conservatism_ADJ: "Japanese"
- JAP_conservatism_DEF: "Republic of Japan"
+ JAP_conservatism: "大日本帝国"
+ JAP_conservatism_ADJ: "大日本帝国"
+ JAP_conservatism_DEF: "大日本帝国"
  JOR_conservatism: "Jordan"
  JOR_conservatism_ADJ: "Jordanian"
  JOR_conservatism_DEF: "Republic of Jordan"
