日本軍事NFへの効果の付与及び一部ディシジョンの日本語化

--- a/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
@@ -131,8 +131,8 @@ jap_ARMY_3_2:"砲火力の強化"
 jap_ARMY_3_2_desc:""
 jap_ARMY_3_3:"戦車開発"
 jap_ARMY_3_3_desc:""
-jap_ARMY_10:"特殊部隊"
-jap_ARMY_10_desc:"陸軍の未来"
+jap_ARMY_10:"陸軍の未来"
+jap_ARMY_10_desc:""
 
 jap_Integration_of_Army_and_Navy:"陸海軍の統合に向けて"
 jap_Integration_of_Army_and_Navy_desc:""
