GER / 国民精神効果調整・NF(24/101)

--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -45,6 +45,8 @@
  GER_one_country_socialism:0 "一国社会主義"
  GER_reclaiming_schleswig:0 "シュレースヴィヒ奪還"
  GER_thought_education:0 "思想教育の徹底"
+ GER_socialist_realism:0 "社会主義リアリズム"
+ GER_state_atheism:0 "国家無神論"
  GER_attack_france:0 "西方への遠征"
  GER_attack_italy:0 "ローマ帝国の野望を砕く"
  GER_support_finland:0 "フィンランドの独立を支援"
