--- a/localisation/TR_ideas/japanese/TR_GER_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_GER_ideas_l_japanese.yml
@@ -10,3 +10,7 @@
  GER_Dolchstosslegende: "背後の一突き伝説"
  GER_legacy_of_an_empire: "帝国の遺産"
  GER_Opposition_to_War: "戦争への反対"
+ GER_socialist_economy_right: "経済政策の見直し"
+ GER_socialist_economy_right2: "経済政策の見直し"
+ GER_socialist_economy_left: "経済政策の見直し"
+ GER_socialist_economy_left2: "経済政策の見直し"
