日本NF協調外交の効果実装

--- a/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
@@ -51,7 +51,7 @@
  TR_japan.13.t: "国家保護法"
  TR_japan.13.d: "通称226事件と呼ばれる血盟団によるテロ活動は国家を転覆しかねない過激思想の持ち主が存在することを意味している。ここで帝国政府は帝国議会に対し、一つの法案を提出した。\n§R「国家保護法」§!\nその名の通り過激主義者によるテロ行為から帝国を保護するための法案であり、警察組織に予備拘禁の権限を付与するものである。我々はこの法案を認めるべきだろうか？"
  TR_japan.13.a: "帝国の防衛のためには自由など惜しくない！"
- TR_japan.13.b: "帝国の防衛のためであっても思想の自由を陛下より与えられた臣民の権利は奪うことはできない！"
+ TR_japan.13.b: "そのような法案は全体主義を生み出すだけだ"
  TR_japan.15.t: "公害問題の深刻化"
  TR_japan.15.d: "帝国の経済発展のために犠牲となっている臣民がいるようだ。古くは田中正造衆議院議員による明治天皇への直訴によって社会に大きく知られるようになった足尾銅山鉱毒事件をはじめ社会に出ていないものも数多くあるようだ。"
  TR_japan.15.a: "帝国の利益より臣民の健康のほうが大切なのだろうか？"
