ドイツNFほぼ完成

--- a/localisation/TR_ideas/japanese/TR_GER_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_GER_ideas_l_japanese.yml
@@ -14,3 +14,7 @@
  GER_socialist_economy_right2: "経済政策の見直し"
  GER_socialist_economy_left: "経済政策の見直し"
  GER_socialist_economy_left2: "経済政策の見直し"
+ GER_preparing_for_battle: "戦いへの備え"
+ GER_preparing_for_battle2: "戦いへの備え"
+ GER_new_socialism_economy_right: "新しい社会主義経済"
+ GER_new_socialism_economy_left: "新しい社会主義経済"
