日本通常NF効果実装（仮）

--- a/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
@@ -38,7 +38,7 @@
  TR_japan.9.a: "護衛艦を増やせ！"
  TR_japan.9.b: "主力艦も適度に増やさなければ"
  TR_japan.10.t: "主力艦の整備を"
- TR_japan.10.d: "建造計画の大まかな方針は決まったが、戦艦には２種類存在する。金剛型に代表される高速巡洋戦艦と長門型に代表される中速戦艦である。我々に求められるのはどちらだろうか？"
+ TR_japan.10.d: "建造計画の大まかな方針は決まったが、戦艦には２種類存在する。金剛型に代表される高速戦艦と長門型に代表される中速戦艦である。我々に求められるのはどちらだろうか？"
  TR_japan.10.a: "巡洋戦艦だ！"
  TR_japan.10.b: "中速戦艦だ！"
  TR_japan.11.t: "新時代の到来"
