--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -47,7 +47,10 @@
  RUS_operational_doctrine:"作戦術"
  RUS_operational_doctrine_desc:"戦術と戦略の中間に位置する作戦という概念を扱う新たな理論がロシア軍内で誕生した。これらの理論は世界で未だ例がなく、これこそが我が軍を先進的にする思想であろう。"
 
- RUS_1_year_buildup:"一ヵ年工業化計画"
- RUS_1_year_buildup_desc:"我が国の工業規模が十分になった今、我々は急速な工業化のために全ての国力を使う時が来た。この一年でロシアは世界の工場となるであろう。"
+ RUS_3_year_buildup:"三ヵ年工業化計画"
+ RUS_3_year_buildup_desc:"我が国の工業規模が十分になった今、我々は急速な工業化のために全ての国力を使う時が来た。この三年でロシアは世界の工場となるであろう。"
  RUS_deep_battle_doctrine:"縦深戦闘ドクトリン"
  RUS_deep_battle_doctrine_desc:"トゥハチェフスキーは我が国の最も優秀な元帥だ。彼の持論では、大量の兵士とその先鋒となる戦車部隊による深い攻撃方法こそが今後の戦争における最も優秀な作戦らしい。この軍事理論を採用するために、彼を軍事研究の顧問とするべきだ。"
+
+ RUS_alaska_development:"アラスカ調査隊"
+ RUS_alaska_development_desc:"我が国の目覚ましい工業化によって、アラスカの新たな資源開発が可能となった。我々は迫りくる共産主義者と対峙するために大量の資源を必要としている。"
