--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -40,8 +40,8 @@
  RUS_national_construction_idea:"国営建設局"
  RUS_national_construction_idea_desc:"我が国の広大な領土に対応するように、我が国のインフラは安価に建設されるよう設計されている。"
 
- RUS_one_year_buildup:"一ヵ年工業化計画"
- RUS_one_year_buildup_desc:"ツァーリは一年間での可能な限りの工業化を命令した。我々は来年、世界の工場となるだろう。"
+ RUS_three_year_buildup:"三ヵ年工業化計画"
+ RUS_three_year_buildup_desc:"ツァーリは三年間での可能な限りの工業化を命令した。我々は世界の工場となるだろう。"
 
  RUS_deep_battle:"縦深戦闘"
  RUS_deep_battle_desc:"トゥハチェフスキーが考案した縦深戦闘によって、我が軍の攻撃力は格段に向上した。"
