イギリス　戦債返還ディシジョンの追加

--- a/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
@@ -21,15 +21,15 @@
   TR_Russia_per_peace_tt.3: "§Yアゼルバイジャン§!、§Yアルメニア§!、§Yグルジア§!、§Yアブハジア§!、§Yアシハバード§!、§Yタシャウズ§!、は§Gペルシャ帝国§!の150年前の領土として§R中核州として奪還§!される。\n§Rコーカサス山脈の諸州§!は安全保障のために§Gペルシャ帝国§!が一方的に破棄可能な§R非武装地帯§!となる。\n§Rロシア帝国§!は§Gペルシャ帝国§!に賠償金を支払う。"
   TR_Russia_per_peace_tt.4: "§Yアゼルバイジャン§!、§Yアルメニア§!、§Yグルジア§!、§Yアブハジア§!、§Yアシハバード§!、§Yタシャウズ§!は§Gペルシャ帝国§!の150年前の領土として§R中核州として奪還§!される。§Yエカテリノダール§!、§Yスタヴロポリ§!、§Yグロズヌイ§!、§Yチェチェンイングーシ§!、§Y北オセチア§!、§Yカバルダ=バルカル§!、§Yコーカサス山脈§!、§Yウスチウルト§!、§Yカラカルパクスタン§!、§Yヒヴァ§!、§Yブハラ§!は§Gアケネメス朝§!の領土として§R奪還§!される。\n§Yアルメニア§!、§Yシリア§!、§Yウズベキスタン§!、§Yタジキスタン§!は§Gアケネメス朝§!の属国として§R奪還§!される。"
 
-  TR_Russia.tt.6:"§Yモスクワ§!によく訓練された10師団による§G親衛戦車軍団§!を編成する！"
-  TR_Russia.tt.7:"§Yペトログラード§!によく訓練された12師団による§G親衛戦車軍団§!を編成する！"
-  TR_Russia.tt.8:"§Y全ての司令官§!のスキルレベル、攻撃レベル、補給レベルが§G1§!上がる。"
+  TR_Russia.tt.6: "§Yモスクワ§!によく訓練された10師団による§G親衛戦車軍団§!を編成する！"
+  TR_Russia.tt.7: "§Yペトログラード§!によく訓練された12師団による§G親衛戦車軍団§!を編成する！"
+  TR_Russia.tt.8: "§Y全ての司令官§!のスキルレベル、攻撃レベル、補給レベルが§G1§!上がる。"
 
 
 
 
 
-  TR_Persia_tt.1:"§Gロシア§!から略奪した機器とバクーの施設を工場に転換する！"
+  TR_Persia_tt.1: "§Gロシア§!から略奪した機器とバクーの施設を工場に転換する！"
 
 
 
@@ -38,6 +38,6 @@
   TR_South_Italy_name: "南イタリア"
   TR_nosupport: "§Rこの選択肢は現バージョンでは実装されていない！§!"
   TR_focus_nosupport: "§Rこの選択肢には現実味がない§!"
+  TR_avaiable_on_events_tt: "この方針はイベントによって達成される。"
   RULL_JOIN_ALLY_POLAND_TOOLTIP: "§Y[POL.GetNameDef]§!は戦争を行っていない。"
-
   RULE_ALLOW_RELEASE_NATIONS_RUSSIA_POLAND_TOOLTIP: "§Y[ROOT.GetNameDefCap]§!は§Y[POL.GetNameDef]§!の解放ができません。"
