イギリス　デバフ解除

--- a/localisation/TR_ideas/japanese/TR_ENG_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_ENG_ideas_l_japanese.yml
@@ -4,3 +4,7 @@
 	TR_ENG_royal_army: "王立陸軍"
 	TR_ENG_royal_navy: "王立海軍"
 	TR_ENG_royal_air_force: "王立空軍"
+  TR_ENG_financial_issues1: "財政問題"
+  TR_ENG_financial_issues2: "財政問題"
+  TR_ENG_financial_issues3: "財政問題"
+  TR_ENG_financial_issues4: "財政問題"
