--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -1098,6 +1098,9 @@
  SRI_coalition_party: "FSUNI"
  SRI_coalition_party_long: "イタリア民族統一社会主義戦線"
 
+
+ RUS_anarchism_party: "NMU"
+ RUS_anarchism_party_long: "ネストル・マフノ連合"
  RUS_communism_party: "RSDLP-B"
  RUS_communism_party_long: "ロシア社会民主労働党-多数派"
  RUS_socialism_party: "SR"
@@ -1105,11 +1108,13 @@
  RUS_socialdemocratic_party: "RSDLP-M"
  RUS_socialdemocratic_party_long: "ロシア社会民主労働党-少数派"
  RUS_democratic_party: "KDP"
- RUS_democratic_party: "立憲民主党"
+ RUS_democratic_party_long: "立憲民主党"
  RUS_conservatism_party: "PP"
  RUS_conservatism_party_long: "進歩党"
  RUS_neutrality_party: "RMU"
  RUS_neutrality_party_long: "ロシア君主主義同盟"
+ RUS_theocracy_party: "ROC"
+ RUS_theocracy_party_long: "ロシア正教会"
  RUS_fascism_party: "RFP"
  RUS_fascism_party_long: "ロシアファシスト党"
 
