--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -42,7 +42,9 @@
  TR_Russia.14.a:"永久の平和を神へ献上するべきだ。"
  TR_Russia.14.b:"アケネメスの栄光をもう一度！"
 
-
+ TR_Russia.15.t:"アラスカ開発"
+ TR_Russia.15.d:"アラスカの大地に埋まる新たな資源を採掘する基盤が整った。すでに試験的に作られた油田街にはロシア本土から多くの労働者が移住している。"
+ TR_Russia.15.a:"続行しろ。"
 
  TR_Russia_news.1.t: "ロシア皇帝の暗殺"
  TR_Russia_news.1.d: "一月中頃、ロシアの冬将軍はすでに大地を覆い、吹雪の中モスクワに到着した皇帝アレクセイを一発の銃弾が襲った。長らく政府によって抑圧されてきたボリシェヴィキは、入念なテロルの計画を実行に移した。皇帝アレクセイの持病、血友病の影響もあり、その日のうちに皇帝は急いで送り込まれた病院で医師の治療もやむなく息を引き取った。ペトログラードはこの知らせに動揺している。\n不幸中の幸いは、帝室一同が集まっていた宮殿に仕掛けられた爆弾が近衛兵により間一髪で解除されたことであろう。ただ、もはやロシア帝国にかつての秩序は存在せず、あるのは反動的な宮廷とそれに反抗的な一部の政府、そして陰で暗躍する共産主義者だけだ。"
