フランス海軍ベトナムとかの整備

--- a/localisation/TR_focus/japanese/TR_FRA_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_FRA_focus_l_japanese.yml
@@ -17,8 +17,8 @@
  FRA_com6: "プロパガンダ活動"
  FRA_com7: "秘密警察の回復"
  FRA_com8: "秩序警察"
- FRA_com_purge3: "軍部の粛清"
- FRA_com_purge4: "粛清の完遂"
+ FRA_com_purge5: "人材の昇進"
+ FRA_com_purge6: "粛清からの回復"
 
  FRA_sadc: "サンディカリストの勝利"
  FRA_bonp: "ボナパルティズム社会主義の勝利"
