--- a/localisation/TR_events/japanese/TR_ENG_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_ENG_l_japanese.yml
@@ -1,4 +1,17 @@
 ﻿l_japanese:
+ TR_uk_diplomacy.1.t: "イギリスとの同盟"
+ TR_uk_diplomacy.1.d: "周囲を社会主義国家に囲まれる我が国には安全保障上の懸念がある。この提案は良いものとなるだろう。"
+ TR_uk_diplomacy.1.a: "これは頼もしい"
+ TR_uk_diplomacy.2.t: "オランダが同盟を承認"
+ TR_uk_diplomacy.2.d: "我らの提案に対し、オランダは承認の言葉を返した。これは我が国の安全保障上非常に重要な出来事である。"
+ TR_uk_diplomacy.2.a: "同盟万歳！"
+ TR_uk_diplomacy.3.t: "オランダが同盟を拒否"
+ TR_uk_diplomacy.3.d: "我らの提案に対し、オランダは拒否の言葉を返した。これは我が国の安全保障上非常に重要な出来事である。"
+ TR_uk_diplomacy.3.a: "奴らは危険を知らないのか？"
+ TR_uk_diplomacy.4.t: "ベルギー政府の帰還"
+ TR_uk_diplomacy.4.d: "先日、コンゴへと亡命していたベルギー政府から連絡が届いた。どうやら我々が保護しているフランドルへ帰還し、ベルギーを再考させるつもりらしい。"
+ TR_uk_diplomacy.4.a: "此処で奴らに恩を売っておけ"
+ TR_uk_diplomacy.4.b: "フランドルは我らの土地だ"
  TR_uk.1.t: "財政問題"
  TR_uk.1.d: "我が国では先の大戦や戦間期の間に膨れ上がった財政支出が問題となっている。現在の状態が続けば先人の築き上げた帝国は崩れ落ち、英国は弱体な国となってしまうだろう。"
  TR_uk.1.a: "直ちに動かねばならないな"
@@ -34,3 +47,6 @@
  TR_uk.11.t: "グレート・ゲームの終焉"
  TR_uk.11.d: "カイロで結ばれた合意によりついにグレート・ゲームは終わった。イギリス、ロシアともに共産主義の脅威に立ち向かうべく手を取り合わねばならない。"
  TR_uk.11.t: "グレート・ゲームは終わった"
+ TR_uk.12.t: "イギリスが借金の返済を拒否"
+ TR_uk.12.d: "愚かな国イギリスは我々の韓国を無視し借金の返済を拒否した。彼らには然るべき判決がくだされるべきである。"
+ TR_uk.12.a: "正義の鉄槌をくだせ"
