--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -25,24 +25,42 @@
  UZB_puppet_PER: "マワランナハルの防壁"
  TAJ_puppet_PER: "ソグディアナの防壁"
 
- #IDC: "インドシナ"
- #IDC_ADJ: "インドシナ"
- #IDC_DEF: "インドシナ"
- #IDC_communism: "インドシナ社会主義連邦共和国"
- #IDC_communism_DEF: "インドシナ社会主義連邦共和国"
- #IDC_socialism: "インドシナ社会主義共和国"
- #IDC_socialism_DEF: "インドシナ社会主義共和国"
- #IDC_socialdemocratic: "インドシナ連邦共和国"
- #IDC_socialdemocratic_DEF: "インドシナ連邦共和国"
- #IDC_democratic: "インドシナ連邦"
- #IDC_democratic_DEF: "インドシナ連邦"
- #IDC_conservatism: "インドシナ国"
- #IDC_conservatism_DEF: "インドシナ国"
- #IDC_neutrality: "インドシナ連合王国"
- #IDC_neutrality_DEF: "インドシナ連合王国"
- #IDC_fascism: "インドシナ帝国"
- #IDC_fascism_DEF: "インドシナ帝国"
- #IDC_subject: "$OVERLORDADJ$領インドシナ連邦"
+ IDC: "インドシナ"
+ IDC_ADJ: "インドシナ"
+ IDC_DEF: "インドシナ"
+ IDC_communism: "インドシナ社会主義連邦共和国"
+ IDC_communism_DEF: "インドシナ社会主義連邦共和国"
+ IDC_socialism: "インドシナ社会主義共和国"
+ IDC_socialism_DEF: "インドシナ社会主義共和国"
+ IDC_socialdemocratic: "インドシナ連邦共和国"
+ IDC_socialdemocratic_DEF: "インドシナ連邦共和国"
+ IDC_democratic: "インドシナ連邦"
+ IDC_democratic_DEF: "インドシナ連邦"
+ IDC_conservatism: "インドシナ国"
+ IDC_conservatism_DEF: "インドシナ国"
+ IDC_neutrality: "インドシナ連合王国"
+ IDC_neutrality_DEF: "インドシナ連合王国"
+ IDC_fascism: "インドシナ帝国"
+ IDC_fascism_DEF: "インドシナ帝国"
+ IDC_subject: "$OVERLORDADJ$領インドシナ連邦"
+ IDC_FRA: "インドシナ"
+ IDC_FRA_ADJ: "インドシナ"
+ IDC_FRA_DEF: "インドシナ"
+ IDC_FRA_communism: "インドシナ社会主義連邦共和国"
+ IDC_FRA_communism_DEF: "インドシナ社会主義連邦共和国"
+ IDC_FRA_socialism: "インドシナ社会主義共和国"
+ IDC_FRA_socialism_DEF: "インドシナ社会主義共和国"
+ IDC_FRA_socialdemocratic: "インドシナ連邦共和国"
+ IDC_FRA_socialdemocratic_DEF: "インドシナ連邦共和国"
+ IDC_FRA_democratic: "インドシナ連邦"
+ IDC_FRA_democratic_DEF: "インドシナ連邦"
+ IDC_FRA_conservatism: "インドシナ国"
+ IDC_FRA_conservatism_DEF: "インドシナ国"
+ IDC_FRA_neutrality: "インドシナ連合王国"
+ IDC_FRA_neutrality_DEF: "インドシナ連合王国"
+ IDC_FRA_fascism: "インドシナ帝国"
+ IDC_FRA_fascism_DEF: "インドシナ帝国"
+ IDC_FRA_subject: "$OVERLORDADJ$領インドシナ連邦"
  POL_KPU: "クラクフ農民連合"
  POL_KPU_DEF: "クラクフ農民連合"
  POL_KPU_ADJ: "クラクフ"
