--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -28,8 +28,8 @@
  IDC: "インドシナ"
  IDC_ADJ: "インドシナ"
  IDC_DEF: "インドシナ"
- IDC_communism: "インドシナ社会主義連邦共和国"
- IDC_communism_DEF: "インドシナ社会主義連邦共和国"
+ IDC_communism: "インドシナ社会主義共和国連邦"
+ IDC_communism_DEF: "インドシナ社会主義共和国連邦"
  IDC_socialism: "インドシナ社会主義共和国"
  IDC_socialism_DEF: "インドシナ社会主義共和国"
  IDC_socialdemocratic: "インドシナ連邦共和国"
@@ -45,8 +45,8 @@
  IDC_FGE: "インドシナ"
  IDC_FGE_ADJ: "インドシナ"
  IDC_FGE_DEF: "インドシナ"
- IDC_FGE_communism: "インドシナ社会主義連邦共和国"
- IDC_FGE_communism_DEF: "インドシナ社会主義連邦共和国"
+ IDC_FGE_communism: "インドシナ社会主義共和国連邦"
+ IDC_FGE_communism_DEF: "インドシナ社会主義共和国連邦"
  IDC_FGE_socialism: "インドシナ社会主義共和国"
  IDC_FGE_socialism_DEF: "インドシナ社会主義共和国"
  IDC_FGE_socialdemocratic: "インドシナ連邦共和国"
