--- a/localisation/TR_focus/japanese/TR_ENG_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_ENG_focus_l_japanese.yml
@@ -16,3 +16,7 @@
  TR_ENG_the_end_of_the_great_game: "グレート・ゲームの終焉"
  TR_ENG_russia_land_britain_sea: "陸のロシア、海のブリテン"
  TR_ENG_fiscal_reconstruction: "財政再建"
+
+
+ TR_ENG_british_commonwealth: "コモンウェルス"
+ TR_ENG_british_commonwealth_desc: "今此処にて帝國は一つとなる。\nすべての帝國自治領が王冠の下にて集い、真の帝國が築かれるであろう。"
