--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -63,3 +63,39 @@
  POL_KPU: "クラクフ農民連合"
  POL_KPU_DEF: "クラクフ農民連合"
  POL_KPU_ADJ: "クラクフ"
+ 
+
+ ENG_imperial_federation_unified: "帝国連邦"
+ ENG_imperial_federation_unified_ADJ: "帝国"
+ ENG_imperial_federation_unified_DEF: "帝国連邦"
+ ENG_imperial_federation_unified_anarchism: "連邦防衛評議会"
+ ENG_imperial_federation_unified_anarchism_ADJ: "連邦"
+ ENG_imperial_federation_unified_anarchism_DEF: "連邦防衛評議会"
+ ENG_imperial_federation_unified_communism: "人民連邦"
+ ENG_imperial_federation_unified_communism_ADJ: "連邦"
+ ENG_imperial_federation_unified_communism_DEF: "人民連邦"
+ ENG_imperial_federation_unified_socialism: "ブリタニア社会主義共和国連邦"
+ ENG_imperial_federation_unified_socialism_ADJ: "ブリタニア"
+ ENG_imperial_federation_unified_socialism_DEF: "ブリタニア社会主義共和国連邦"
+ ENG_imperial_federation_unified_socialdemocratic: "連邦"
+ ENG_imperial_federation_unified_socialdemocratic_ADJ: "連邦"
+ ENG_imperial_federation_unified_socialdemocratic_DEF: "連邦"
+ ENG_imperial_federation_unified_democratic: "イギリス連邦"
+ ENG_imperial_federation_unified_democratic_ADJ: "イギリス"
+ ENG_imperial_federation_unified_democratic_DEF: "イギリス連邦"
+
+ ENG_imperial_federation_unified_conservatism: "帝國聯邦"
+ ENG_imperial_federation_unified_conservatism_ADJ: "帝國"
+ ENG_imperial_federation_unified_conservatism_DEF: "帝國聯邦"
+ ENG_imperial_federation_unified_neytrality: "帝国連邦"
+ ENG_imperial_federation_unified_neytrality: "帝国"
+ ENG_imperial_federation_unified_neytrality_DEF: "帝国連邦"
+ ENG_imperial_federation_unified_theocracy: "神聖ブリタニア帝國"
+ ENG_imperial_federation_unified_theocracy_ADJ: "ブリタニア"
+ ENG_imperial_federation_unified_theocracy_DEF: "神聖ブリタニア帝國"
+ ENG_imperial_federation_unified_fascism: "帝国"
+ ENG_imperial_federation_unified_fascism_ADJ: "帝国"
+ ENG_imperial_federation_unified_fascism_DEF: "帝国"
+ 
+ 
+ 
