--- a/localisation/TR_common/japanese/TR_autonomous_states_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_autonomous_states_l_japanese.yml
@@ -6,6 +6,19 @@
  SAF_autonomy_imperial_dominion: "帝国自治領南アフリカ"
  RAJ_autonomy_imperial_dominion: "帝国自治領インド"
  MAL_autonomy_imperial_dominion: "帝国自治領マラヤ"
+ EGY_autonomy_imperial_dominion: "帝国自治領エジプト"
+ SUD_autonomy_imperial_dominion: "帝国自治領スーダン"
+ KEN_autonomy_imperial_dominion: "帝国自治領ケニア"
+ UGA_autonomy_imperial_dominion: "帝国自治領ウガンダ"
+ TZN_autonomy_imperial_dominion: "帝国自治領タンザニア"
+ ZAM_autonomy_imperial_dominion: "帝国自治領ザンビア"
+ BOT_autonomy_imperial_dominion: "帝国自治領ボツワナ"
+ NGA_autonomy_imperial_dominion: "帝国自治領ナイジェリア"
+ GHA_autonomy_imperial_dominion: "帝国自治領ガーナ"
+ SIE_autonomy_imperial_dominion: "帝国自治領シエラオネ"
+ GAM_autonomy_imperial_dominion: "帝国自治領ガンビア"
+ MLW_autonomy_imperial_dominion: "帝国自治領マラウィ"
+ ZIM_autonomy_imperial_dominion: "帝国自治領ローデシア"
  RUS_autonomy_imperial_dominion: "帝国自治領ロシア"
  GER_autonomy_imperial_dominion: "帝国自治領ゲルマニア"
  FRA_autonomy_imperial_dominion: "帝国自治領フランス"
