日本特殊ルート分岐イベント

--- a/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
@@ -31,8 +31,8 @@
  TR_japan.7.c: "次世代の海軍に必要なものは航空母艦だ！"
  TR_japan.8.t: "戦艦を中心にした艦隊を"
  TR_japan.8.d: "建造計画の大まかな方針は決まったが、戦艦には２種類存在する。金剛型に代表される高速巡洋戦艦と長門型に代表される中速戦艦である。我々に求められるのはどちらだろうか？"
- TR_japan.8.a: "巡洋戦艦だ！"
- TR_japan.8.b: "超大型戦艦だ！"
+ TR_Japan.8.a: "巡洋戦艦だ！"
+ TR_Japan.8.b: "超大型戦艦だ！"
  TR_japan.9.t: "バランスの良い海軍を"
  TR_japan.9.d: "バランスの良い海軍というのは容易であるが、実際にどのような海軍を拡張すればバランスが良くなるか意見が分かれている。どこに注力すればより戦力を生かせる海軍となるだろうか？"
  TR_japan.9.a: "護衛艦を増やせ！"
