--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -1128,3 +1128,8 @@
  ENG_neutrality_party_kings_party_long: "王党"
  ENG_neutrality_party_queens_party: "女王党"
  ENG_neutrality_party_queens_party_long: "女王党"
+
+ JAP_Innovation_Bureaucracy: "革新官僚"
+ JAP_Innovation_Bureaucracy_long: "革新官僚"
+ JAP_socialism_party_r: "日本共産党"
+ JAP_socialism_party_r_long: "ルクセンブルク主義日本共産党"
