--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -454,8 +454,8 @@
  BNT: "バナト"
  BNT_DEF: "バナト"
  BNT_ADJ: "バナト"
- BNT_subject: "$OVERLORDADJ$ $ROM$"
- BNT_subject_DEF: "$OVERLORDADJ$ $ROM$"
+ BNT_HUN_subject: "バナト自治政府"
+ BNT_HUN_subject_DEF: "バナト自治政府"
  YUG_fascism: "ラディカルナ・ユーゴスラビア"
  YUG_fascism_DEF: "ラディカルナ・ユーゴスラビア"
  YUG_democratic: "ユーゴスラビア連邦"
@@ -1349,6 +1349,8 @@
  SLO: "スロヴァキア"
  SLO_DEF: "スロヴァキア"
  SLO_ADJ: "スロヴァキア"
+ SLO_HUN_subject: "スロヴァキア自治政府"
+ SLO_HUN_subject_DEF: "スロヴァキア自治政府"
  BHU_fascism: "雷龍帝国"
  BHU_fascism_DEF: "雷龍帝国"
  BHU_democratic: "ブータン共和国"
@@ -3453,6 +3455,8 @@
  TRA: "トランシルヴァニア"
  TRA_DEF: "トランシルヴァニア"
  TRA_ADJ: "トランシルヴァニア"
+ TRA_HUN_subject: "トランシルヴァニア自治政府"
+ TRA_HUN_subject_DEF: "トランシルヴァニア自治政府"
  vojvodina_democratic: "ヴォイヴォディナ共和国"
  vojvodina_democratic_DEF: "ヴォイヴォディナ共和国"
  vojvodina_democratic_ADJ: "ヴォイヴォディナ"
