--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -653,8 +653,8 @@
  HUN_fascism_DEF: "ハンガリー"
  HUN_democratic: "ハンガリー共和国"
  HUN_democratic_DEF: "ハンガリー共和国"
- HUN_neutrality: "ハンガリー王国"
- HUN_neutrality_DEF: "ハンガリー王国"
+ HUN_neutrality: "ハンガリー人民共和国"
+ HUN_neutrality_DEF: "ハンガリー人民共和国"
  HUN_communism: "ハンガリー人民共和国"
  HUN_communism_DEF: "ハンガリー人民共和国"
  HUN_fascism_ADJ: "ハンガリー"
