フランス政治NF完了

--- a/localisation/TR_focus/japanese/TR_CZE_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_CZE_focus_l_japanese.yml
@@ -47,7 +47,7 @@
  CZE_dip3: "技術共有"
  CZE_dip_slo1: "スロバキア侵攻"
  CZE_dip_slo2: "スロバキアへの投資"
- CZE_dip_hun1: "スロバキア侵攻"
+ CZE_dip_hun1: "ハンガリー侵攻"
  CZE_dip_hun2: "スロバキア南部の支配確立"
  CZE_dip_big1: "拡大外交"
  CZE_dip_big2: "独自路線"
