インド内戦

--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -96,6 +96,11 @@
  ENG_imperial_federation_unified_fascism: "帝国"
  ENG_imperial_federation_unified_fascism_ADJ: "帝国"
  ENG_imperial_federation_unified_fascism_DEF: "帝国"
+
+ IPS: "藩王連邦"
+ IPS_DEF: "藩王連邦"
+ IPS_ADJ: "藩王"
+
  
  
  
