--- a/localisation/TR_ideas/japanese/TR_ENG_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_ENG_ideas_l_japanese.yml
@@ -1,10 +1,24 @@
 ﻿l_japanese:
   TR_ENG_anti_communist_bulwark: "反共の防波堤"
-  TR_ENG_anti_communist_bulwark_desc: "海の向こうにある３つの社会主義国家に英国は多大なる警戒心を抱いてオリ、国民たちは社会主義という名目で平和を脅かす彼らを毛嫌いしている。"
-	TR_ENG_royal_army: "王立陸軍"
-	TR_ENG_royal_navy: "王立海軍"
-	TR_ENG_royal_air_force: "王立空軍"
+  TR_ENG_anti_communist_bulwark_desc: "海の向こうにある３つの社会主義国家に英国は多大なる警戒心を抱いており、国民たちは社会主義という名目で平和を脅かす彼らを毛嫌いしている。"
+  TR_ENG_colonial_maintenance_force: "植民地維持軍"
+  TR_ENG_colonial_maintenance_force_desc: "フランスの革命により始まった世界中の社会主義運動は我が国の植民地においても活発化している。現地の独立勢力と社会主義者が結びつかぬよう武力統制を強めているがこれは我が国の財政を圧迫している。"
+  TR_ENG_papier_mache_navy: "ハリボテの艦船"
+  TR_ENG_papier_mache_navy_desc: "悪夢の20年代と言われた十年間、我が国はロシア帝国との間で建艦競争を続けていた。結果として不必要なほどの量の軍艦が出来上がったが、これらの艦はとても使用できたものではなく、その管理は我が国の財政を圧迫している。"
+  TR_ENG_navy_heavy_budget: "海軍への予算偏重"
+  TR_ENG_navy_heavy_budget_desc: "悪夢の20年代の建艦競争以来倭は国では海軍予算が圧倒的に高く、それを補うべく陸軍、空軍の予算は抑えられている。"
   TR_ENG_financial_issues1: "財政問題"
-  TR_ENG_financial_issues2: "財政問題"
-  TR_ENG_financial_issues3: "財政問題"
-  TR_ENG_financial_issues4: "財政問題"
+  TR_ENG_financial_issues1_desc: "様々な複数の要因が絡み合い、我が国には史上最悪の財政危機が訪れている。この財政問題を解決すべく、挙国一致体制が築かれ一歩帝国は前進している。"
+  TR_ENG_financial_issues2: "$TR_ENG_financial_issues1$"
+  TR_ENG_financial_issues2_desc: "様々な複数の要因が絡み合い、我が国には史上最悪の財政危機が訪れている。部分的には解決したが未だ財政を安定させるには至ってない。"
+  TR_ENG_financial_issues3: "$TR_ENG_financial_issues1$"
+  TR_ENG_financial_issues3_desc: "様々な複数の要因が絡み合い、我が国には史上最悪の財政危機が訪れている。ようやく先行きが見えてきて、国民感情も落ち着いてきている。"
+  TR_ENG_financial_issues4: "$TR_ENG_financial_issues1$"
+  TR_ENG_financial_issues4_desc: "様々な複数の要因が絡み合い、我が国には史上最悪の財政危機が訪れている。あと一歩だ。驟雨着点はすぐそばにある。"
+  TR_ENG_war_bond_issue_idea: "膨れ上がった戦債"
+  TR_ENG_war_bond_issue_idea_desc: "先の大戦の戦費は莫大なものとなり、我が国は多くの戦債を発行した。だがその多くはどれ建てであり、これは我が国の経済は米国に手綱を握られていることと同義である。"
+  TR_ENG_royal_army: "王立陸軍"
+	TR_ENG_royal_navy1: "王立海軍"
+	TR_ENG_royal_navy2: "王立海軍"
+	TR_ENG_royal_navy3: "王立海軍"
+	TR_ENG_royal_air_force: "王立空軍"
