日本NFの拡張

--- a/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
@@ -33,8 +33,8 @@ jap_Keynesian_Studies_in_Practice:"ケインズ学の実践"
 jap_Keynesian_Studies_in_Practice_desc:""
 jap_Controlling_inflation:"インフレを抑える"
 jap_Controlling_inflation_desc:""
-jap_Growth_based_on_Keynesian_studies.:"ケインズ学に基づく成長を"
-jap_Growth_based_on_Keynesian_studies._desc:""
+jap_Growth_based_on_Keynesian_studies:"ケインズ学に基づく成長を"
+jap_Growth_based_on_Keynesian_studies_desc:""
 jap_decentralization_of_power:"地方分権"
 jap_decentralization_of_power_desc:""
 jap_extensive_transportation_network:"交通網の充実"
