--- a/localisation/TR_focus/japanese/TR_FRA_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_FRA_focus_l_japanese.yml
@@ -19,6 +19,7 @@
  FRA_com8: "秩序警察"
  FRA_com_purge5: "人材の昇進"
  FRA_com_purge6: "粛清からの回復"
+ FRA_com_tech: "共産主義科学"
 
  FRA_sadc: "サンディカリストの勝利"
  FRA_bonp: "ボナパルティズム社会主義の勝利"
@@ -79,7 +80,7 @@
  FRA_nav_mil1: "人民陸軍"
  FRA_nav_mil2: "陸軍の機械化"
  FRA_nav_mil3: "歩兵装備の更新"
- FRA_nav_mil4: "陸軍ドクトリン"
+ FRA_nav_mil4: "陸軍ドクトリンの発展あ"
 
  FRA_mil: "大陸軍の復活"
  FRA_mil1: "陸軍国家"
@@ -87,7 +88,7 @@
  FRA_mil3: "ドクトリンの発展Ⅰ"
  FRA_mil4: "ドクトリンの発展Ⅱ"
  FRA_mil5: "我は洪水なり"
- FRA_tank1: "戦車開発"
+ FRA_mil_tank1: "戦車開発"
  FRA_mil_tank2: "戦車軍"
  FRA_mil_arc1: "戦場の女神"
  FRA_mil_arc2: "更なる砲兵を"
