--- a/localisation/TR_ideas/japanese/TR_FRA_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_FRA_ideas_l_japanese.yml
@@ -10,3 +10,4 @@ TR_FRA_kokuminno_situbou: "失望した国民"
 TR_FRA_kokuminno_situbou1: "外に目を逸らせる"
 TR_FRA_SCpolice: "秘密警察の回復"
 TR_FRA_SCpolice1: "秩序警察"
+TR_FRA_tech: "共産主義科学"
