フランスの政党と国家元首

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -145,8 +145,8 @@
  FRA_democratic_DEF: "フランス"
  FRA_neutrality: "ブルボン・フランス"
  FRA_neutrality_DEF: "ブルボン・フランス"
- FRA_communism: "フランス・コミューン"
- FRA_communism_DEF: "フランス・コミューン"
+ FRA_communism: "フランス社会主義共和国"
+ FRA_communism_DEF: "フランス社会主義共和国"
  FRA_fascism_ADJ: "フランス"
  FRA_democratic_ADJ: "フランス"
  FRA_neutrality_ADJ: "フランス"
