--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -18,3 +18,7 @@
  JAP_chikuhei_nakajima: "中島知久平"
  JAP_osachi_hamaguchi: "浜口雄幸"
  JAP_chuji_machida: "町田忠治"
+
+FRA_ludovic_oscar_frossard: "ルドヴィック＝オスカー・フロッサール"
+
+GER_karl_liebknecht: "カール・リープクネヒト"
