--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -2308,21 +2308,6 @@
  KUW: "クウェート"
  KUW_DEF: "クウェート"
  KUW_ADJ: "クウェート"
- CSA_fascism: "アメリカ連合国"
- CSA_fascism_DEF: "アメリカ連合国"
- CSA_democratic: "アメリカ州連合"
- CSA_democratic_DEF: "アメリカ州連合"
- CSA_neutrality: "アメリカ連合"
- CSA_neutrality_DEF: "アメリカ連合"
- CSA_communism: "アメリカ労働者連合"
- CSA_communism_DEF: "アメリカ労働者連合"
- CSA_fascism_ADJ: "アメリカ連合国"
- CSA_democratic_ADJ: "アメリカ連合国"
- CSA_neutrality_ADJ: "アメリカ連合国"
- CSA_communism_ADJ: "アメリカ連合国"
- CSA: "アメリカ連合"
- CSA_DEF: "アメリカ連合"
- CSA_ADJ: "アメリカ連合国"
  USB_fascism: "アメリカ非協力諸州"
  USB_fascism_DEF: "アメリカ非協力諸州"
  USB_democratic: "アメリカ非協力諸州"
@@ -6340,3 +6325,31 @@
  GRS: "革命ギリシャ"
  GRS_ADJ: "革命ギリシャ"
  GRS_DEF: "ギリシャ革命戦線"
+
+ ADR: "アメリカ民主共和国"
+ ADR_ADJ: "アメリカ民主共和国"
+ ADR_DEF: "アメリカ民主共和国"
+ CSA_fascism: "アメリカ連合国"
+ CSA_fascism_DEF: "アメリカ連合国"
+ CSA_democratic: "アメリカ州連合"
+ CSA_democratic_DEF: "アメリカ州連合"
+ CSA_neutrality: "アメリカ連合"
+ CSA_neutrality_DEF: "アメリカ連合"
+ CSA_communism: "アメリカ労働者連合"
+ CSA_communism_DEF: "アメリカ労働者連合"
+ CSA_fascism_ADJ: "アメリカ連合国"
+ CSA_democratic_ADJ: "アメリカ連合国"
+ CSA_neutrality_ADJ: "アメリカ連合国"
+ CSA_communism_ADJ: "アメリカ連合国"
+ CSA: "アメリカ連合"
+ CSA_DEF: "アメリカ連合"
+ CSA_ADJ: "アメリカ連合国"
+ ARP: "アメリカ共和国"
+ ARP_ADJ: "アメリカ共和国"
+ ARP_DEF: "アメリカ共和国"
+ TXS: "テキサス共和国"
+ TXS_ADJ: "テキサス共和国"
+ TXS_DEF: "テキサス共和国"
+ DST: "デゼレット国"
+ DST_ADJ: "デゼレット国"
+ DST_DEF: "デゼレット国"
