--- a/localisation/TR_events/japanese/TR_USA_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_USA_events_l_japanese.yml
@@ -1,19 +1,19 @@
 ﻿l_japanese:
  TR_usa_civil_war.2.t: "南部でアメリカ連合国が独立を宣言"
- TR_usa_civil_war.2.d: "..."
+ TR_usa_civil_war.2.d: ""
  TR_usa_civil_war.2.a: "..."
  TR_usa_civil_war.3.t: "西岸で民主主義者が独立を宣言"
- TR_usa_civil_war.3.d: "..."
+ TR_usa_civil_war.3.d: ""
  TR_usa_civil_war.3.a: "..."
  TR_usa_civil_war.4.t: "テキサスでアフリカ系アメリカ人による反乱が発生"
- TR_usa_civil_war.4.d: "..."
+ TR_usa_civil_war.4.d: ""
  TR_usa_civil_war.4.a: "..."
  TR_usa_civil_war.5.t: "北部で共産主義者が革命を宣言"
- TR_usa_civil_war.5.d: "..."
+ TR_usa_civil_war.5.d: ""
  TR_usa_civil_war.5.a: "..."
  TR_usa_civil_war.6.t: "ユタ州でモルモン教徒が独立を宣言"
- TR_usa_civil_war.6.d: "..."
+ TR_usa_civil_war.6.d: ""
  TR_usa_civil_war.6.a: "..."
  TR_usa_civil_war.7.t: "第二次アメリカ内戦"
- TR_usa_civil_war.7.d: "..."
+ TR_usa_civil_war.7.d: ""
  TR_usa_civil_war.7.a: "..."
