ドニエストルの国家タグ修正

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6235,27 +6235,27 @@
  ZIM_conservatism_ADJ: "Zimbabwean"
  ZIM_conservatism_DEF: "Republic of Zimbabwe"
 
- DNS_fascism: "沿ドニエストル帝国"
- DNS_fascism_ADJ: "沿ドニエストル"
- DNS_fascism_DEF: "沿ドニエストル帝国"
- DNS_democratic: "沿ドニエストル共和国"
- DNS_democratic_ADJ: "沿ドニエストル"
- DNS_democratic_DEF: "沿ドニエストル共和国"
- DNS_democratic: "沿ドニエストル共和国"
- DNS_democratic_ADJ: "沿ドニエストル"
- DNS_democratic_DEF: "沿ドニエストル共和国"
- DNS_neutrality: "沿ドニエストル"
- DNS_neutrality_ADJ: "沿ドニエストル"
- DNS_neutrality_DEF: "沿ドニエストル"
- DNS_socialism: "沿ドニエストル社会主義共和国"
- DNS_socialism_ADJ: "沿ドニエストル"
- DNS_socialism_DEF: "沿ドニエストル社会主義共和国"
- DNS_communism: "沿ドニエストルソビエト社会主義共和国"
- DNS_communism_ADJ: "沿ドニエストル"
- DNS_communism_DEF: "沿ドニエストルソビエト社会主義共和国"
- DNS: "沿ドニエストル"
- DNS_ADJ: "沿ドニエストル"
- DNS_DEF: "沿ドニエストル"
+ DNI_fascism: "沿ドニエストル帝国"
+ DNI_fascism_ADJ: "沿ドニエストル"
+ DNI_fascism_DEF: "沿ドニエストル帝国"
+ DNI_democratic: "沿ドニエストル共和国"
+ DNI_democratic_ADJ: "沿ドニエストル"
+ DNI_democratic_DEF: "沿ドニエストル共和国"
+ DNI_democratic: "沿ドニエストル共和国"
+ DNI_democratic_ADJ: "沿ドニエストル"
+ DNI_democratic_DEF: "沿ドニエストル共和国"
+ DNI_neutrality: "沿ドニエストル"
+ DNI_neutrality_ADJ: "沿ドニエストル"
+ DNI_neutrality_DEF: "沿ドニエストル"
+ DNI_socialism: "沿ドニエストル社会主義共和国"
+ DNI_socialism_ADJ: "沿ドニエストル"
+ DNI_socialism_DEF: "沿ドニエストル社会主義共和国"
+ DNI_communism: "沿ドニエストルソビエト社会主義共和国"
+ DNI_communism_ADJ: "沿ドニエストル"
+ DNI_communism_DEF: "沿ドニエストルソビエト社会主義共和国"
+ DNI: "沿ドニエストル"
+ DNI_ADJ: "沿ドニエストル"
+ DNI_DEF: "沿ドニエストル"
  SIC_fascism: "四川"
  SIC_fascism_ADJ: "四川"
  SIC_fascism_DEF: "四川"
