ダイナミックカントリー追加

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -1,4 +1,8 @@
 ﻿l_japanese:
+ DBG: "Debug"
+ DBG_DEF: "Debug"
+ DBG_ADJ: "Debug"
+ 
  GER_fascism: "ドイツ人民国"
  GER_fascism_DEF: "ドイツ人民国"
  GER_democratic: "ドイツ共和国"
