--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -101,29 +101,6 @@
  RUS_ADJ: "ロシア"
  FGE_subject: "$OVERLORDADJ$ $FRA$"
  FGE_subject_DEF: "$OVERLORDADJ$ $FRA$"
- USA_fascism: "アメリカ自由帝国"
- USA_fascism_DEF: "アメリカ自由帝国"
- USA_democratic: "アメリカ合衆国"
- USA_democratic_DEF: "アメリカ合衆国"
- USA_neutrality: "アメリカ"
- USA_neutrality_DEF: "アメリカ"
- USA_communism: "アメリカ共産主義諸州連邦"
- USA_communism_DEF: "アメリカ共産主義諸州連邦"
- USA_fascism_ADJ: "アメリカ"
- USA_democratic_ADJ: "アメリカ"
- USA_neutrality_ADJ: "アメリカ"
- USA_communism_ADJ: "アメリカ"
- USA: "アメリカ"
- USA_DEF: "アメリカ"
- USA_ADJ: "アメリカ"
- USA_democratic_subject: "$OVERLORDADJ$北アメリカ"
- USA_democratic_subject_DEF: "$OVERLORDADJ$北アメリカ"
- USA_neutrality_subject: "$OVERLORDADJ$北アメリカ地域"
- USA_neutrality_subject_DEF: "$OVERLORDADJ$北アメリカ地域"
- USA_fascism_subject: "$OVERLORDADJ$アメリカ保護国"
- USA_fascism_subject_DEF: "$OVERLORDADJ$アメリカ保護国"
- USA_communism_subject: "北アメリカ社会主義共和国"
- USA_communism_subject_DEF: "北アメリカ社会主義共和国"
  SWE_fascism: "スヴェア・リーケ"
  SWE_fascism_DEF: "スヴェア・リーケ"
  SWE_democratic: "スウェーデン"
@@ -4404,9 +4381,6 @@
  CRO_socialism: "Croatia"
  CRO_socialism_ADJ: "Croatian"
  CRO_socialism_DEF: "Socialist Republic of Croatia"
- CSA_socialism: "Confederation of America"
- CSA_socialism_ADJ: "Confederate"
- CSA_socialism_DEF: "Socialist Republic of the Confederation of America"
  CUB_socialism: "Cuba"
  CUB_socialism_ADJ: "Cuban"
  CUB_socialism_DEF: "Socialist Republic of Cuba"
@@ -4884,9 +4858,6 @@
  URG_socialism: "Uruguay"
  URG_socialism_ADJ: "Uruguayan"
  URG_socialism_DEF: "Socialist Republic of Uruguay"
- USA_socialism: "America"
- USA_socialism_ADJ: "American"
- USA_socialism_DEF: "Socialist Republic of America"
  USB_socialism: "Unaligned States of America"
  USB_socialism_ADJ: "American"
  USB_socialism_DEF: "Socialist Republic of the Unaligned States of America"
@@ -5057,9 +5028,6 @@
  CRO_socialdemocratic: "Croatia"
  CRO_socialdemocratic_ADJ: "Croatian"
  CRO_socialdemocratic_DEF: "Republic of Croatia"
- CSA_socialdemocratic: "Confederation of America"
- CSA_socialdemocratic_ADJ: "Confederate"
- CSA_socialdemocratic_DEF: "Republic of the Confederation of America"
  CUB_socialdemocratic: "Cuba"
  CUB_socialdemocratic_ADJ: "Cuban"
  CUB_socialdemocratic_DEF: "Republic of Cuba"
@@ -5537,9 +5505,6 @@
  URG_socialdemocratic: "Uruguay"
  URG_socialdemocratic_ADJ: "Uruguayan"
  URG_socialdemocratic_DEF: "Republic of Uruguay"
- USA_socialdemocratic: "America"
- USA_socialdemocratic_ADJ: "American"
- USA_socialdemocratic_DEF: "Republic of America"
  USB_socialdemocratic: "Unaligned States of America"
  USB_socialdemocratic_ADJ: "American"
  USB_socialdemocratic_DEF: "Republic of the Unaligned States of America"
@@ -5710,9 +5675,6 @@
  CRO_conservatism: "Croatia"
  CRO_conservatism_ADJ: "Croatian"
  CRO_conservatism_DEF: "Republic of Croatia"
- CSA_conservatism: "Confederation of America"
- CSA_conservatism_ADJ: "Confederate"
- CSA_conservatism_DEF: "Republic of the Confederation of America"
  CUB_conservatism: "Cuba"
  CUB_conservatism_ADJ: "Cuban"
  CUB_conservatism_DEF: "Republic of Cuba"
@@ -6190,9 +6152,6 @@
  URG_conservatism: "Uruguay"
  URG_conservatism_ADJ: "Uruguayan"
  URG_conservatism_DEF: "Republic of Uruguay"
- USA_conservatism: "America"
- USA_conservatism_ADJ: "American"
- USA_conservatism_DEF: "Republic of America"
  USB_conservatism: "Unaligned States of America"
  USB_conservatism_ADJ: "American"
  USB_conservatism_DEF: "Republic of the Unaligned States of America"
@@ -6329,31 +6288,61 @@
  GRS: "革命ギリシャ"
  GRS_ADJ: "革命ギリシャ"
  GRS_DEF: "ギリシャ革命戦線"
+ 
+ USA_anarchism: "アメリカ無政府主義評議会"
+ USA_anarchism_DEF: "アメリカ無政府主義評議会"
+ USA_syndicalism: "アメリカ労働組合連邦"
+ USA_syndicalism_DEF: "アメリカ労働組合連邦"
+ USA_communism: "アメリカ共産主義諸州連邦"
+ USA_communism_DEF: "アメリカ共産主義諸州連邦"
+ USA_socialism: "アメリカ社会主義諸州連邦"
+ USA_socialism_DEF: "アメリカ社会主義諸州連邦"
+ USA_socialdemocratic: "アメリカ合衆国"
+ USA_socialdemocratic_DEF: "アメリカ合衆国"
+ USA_democratic: "アメリカ合衆国"
+ USA_democratic_DEF: "アメリカ合衆国"
+ USA_conservatism: "アメリカ合衆国"
+ USA_conservatism_DEF: "アメリカ合衆国"
+ USA_neutrality: "アメリカ帝国"
+ USA_neutrality_DEF: "連邦議会と国民に代表される皇帝の国アメリカ"
+ USA_theocracy: "アメリカプロテスタント国"
+ USA_theocracy_DEF: "アメリカプロテスタント国"
+ USA_fascism: "アメリカ自由帝国"
+ USA_fascism_DEF: "アメリカ自由帝国"
+ USA_communism_ADJ: "アメリカ"
+ USA_socialism_ADJ: "アメリカ"
+ USA_socialdemocratic_ADJ: "アメリカ"
+ USA_democratic_ADJ: "アメリカ"
+ USA_conservatism_ADJ: "アメリカ"
+ USA_neutrality_ADJ: "アメリカ"
+ USA_fascism_ADJ: "アメリカ"
+ USA: "アメリカ"
+ USA_DEF: "アメリカ"
+ USA_ADJ: "アメリカ"
+ USA_democratic_subject: "$OVERLORDADJ$北アメリカ"
+ USA_democratic_subject_DEF: "$OVERLORDADJ$北アメリカ"
+ USA_neutrality_subject: "$OVERLORDADJ$北アメリカ地域"
+ USA_neutrality_subject_DEF: "$OVERLORDADJ$北アメリカ地域"
+ USA_fascism_subject: "$OVERLORDADJ$アメリカ保護国"
+ USA_fascism_subject_DEF: "$OVERLORDADJ$アメリカ保護国"
+ USA_communism_subject: "北アメリカ社会主義共和国"
+ USA_communism_subject_DEF: "北アメリカ社会主義共和国"
 
+ USA_USA: "合衆国政府"
+ USA_USA_DEF: "アメリカ合衆国"
+ USA_USA_ADJ: "アメリカ"
  ADR: "アメリカ民主共和国"
  ADR_ADJ: "アメリカ民主共和国"
  ADR_DEF: "アメリカ民主共和国"
- CSA_fascism: "アメリカ連合国"
- CSA_fascism_DEF: "アメリカ連合国"
- CSA_democratic: "アメリカ州連合"
- CSA_democratic_DEF: "アメリカ州連合"
- CSA_neutrality: "アメリカ連合"
- CSA_neutrality_DEF: "アメリカ連合"
- CSA_communism: "アメリカ労働者連合"
- CSA_communism_DEF: "アメリカ労働者連合"
- CSA_fascism_ADJ: "アメリカ連合国"
- CSA_democratic_ADJ: "アメリカ連合国"
- CSA_neutrality_ADJ: "アメリカ連合国"
- CSA_communism_ADJ: "アメリカ連合国"
- CSA: "アメリカ連合"
- CSA_DEF: "アメリカ連合"
- CSA_ADJ: "アメリカ連合国"
- ARP: "アメリカ共和国"
- ARP_ADJ: "アメリカ共和国"
- ARP_DEF: "アメリカ共和国"
+ CSA: "アメリカ連合国"
+ CSA_DEF: "アメリカ連合国"
+ CSA_ADJ: "アメリカ"
+ AMR: "アメリカ共和国"
+ AMR_ADJ: "アメリカ共和国"
+ AMR_DEF: "アメリカ"
  TXS: "テキサス共和国"
  TXS_ADJ: "テキサス共和国"
- TXS_DEF: "テキサス共和国"
+ TXS_DEF: "テキサス"
  DST: "デゼレット国"
  DST_ADJ: "デゼレット国"
- DST_DEF: "デゼレット国"
+ DST_DEF: "デゼレット"
