--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6340,6 +6340,9 @@
  AMR: "アメリカ共和国"
  AMR_ADJ: "アメリカ共和国"
  AMR_DEF: "アメリカ"
+ AMG: "アメリカ軍事政府"
+ AMG_ADJ: "アメリカ軍事政府"
+ AMG_DEF: "アメリカ"
  TXS: "テキサス共和国"
  TXS_ADJ: "テキサス共和国"
  TXS_DEF: "テキサス"
