English Country Name

--- a/localisation/TR_events/japanese/TR_super_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_super_events_l_japanese.yml
@@ -5,3 +5,6 @@
  SE_one_Italy_Title: "イタリア再統一"
  SE_one_Italy_Desc: "我々が何処に退こうとも、                           \n戦う限りローマは存続する                \n\n―ジュゼッペ・ガリバルディ"
  SE_one_Italy_Button: "イタリアよ、一つにあれ"
+ SE_American_Civil_War_Title: "第二次アメリカ内戦"
+ SE_American_Civil_War_Desc: "この戦争の目的を疑うことは、\n神への信頼が十分でない証である。\n\n―ヘンリー・ティムロッド"
+ SE_American_Civil_War_Button: "自由の喊声を上げよ"
