--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6349,3 +6349,9 @@
  DST: "デゼレット国"
  DST_ADJ: "デゼレット国"
  DST_DEF: "デゼレット"
+
+ CRT: "カルパティア・ルテニア"
+ CRT_ADJ: "カルパティア・ルテニア"
+ CRT_DEF: "カルパティア・ルテニア"
+ CRT_HUN_subject: "カルパティア・ルテニア自治政府"
+ CRT_HUN_subject_DEF: "カルパティア・ルテニア自治政府"
