豊臣√のNFの外枠の作成　新しい兵科が追加できてない

--- a/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
@@ -5,7 +5,7 @@
  TR_Japan.1.b: "立憲政友会だ"
  TR_Japan.1.c: "社会大衆党だ"
  TR_japan.2.t: "議会中心主義"
- TR_japan.2.t: "浜口雄幸内閣総理大臣は昨日の国会答弁において以下の通りに述べた。「恐れ多くも天皇陛下が我ら臣民を統治しておられますのは憲法を見るまでもない事実ではございますが、それをお支えする我ら内閣および協賛機関たる帝国議会を天皇陛下はご信頼下さているのであります。つきましては、我ら帝国議会は帝国を世界一の列強へとなるその日まで知恵を振り絞って答えるのが道理でありましょう。我々こそが帝国を動かす最前線なのであります。」"
+ TR_japan.2.d: "浜口雄幸内閣総理大臣は昨日の国会答弁において以下の通りに述べた。「恐れ多くも天皇陛下が我ら臣民を統治しておられますのは憲法を見るまでもない事実ではございますが、それをお支えする我ら内閣および協賛機関たる帝国議会を天皇陛下はご信頼下さているのであります。つきましては、我ら帝国議会は帝国を世界一の列強へとなるその日まで知恵を振り絞って答えるのが道理でありましょう。我々こそが帝国を動かす最前線なのであります。」"
  TR_japan.2.a: "まったくもってその通りだ！"
  TR_japan.2.b: "そもそも天皇など信用ならん！"
  TR_japan.3.t: "皇室中心主義"
