--- a/localisation/TR_ideas/japanese/TR_FRA_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_FRA_ideas_l_japanese.yml
@@ -1,7 +1,21 @@
 ﻿l_japanese:
 TR_FRA_kakumei_honou: "革命の炎"
 TR_FRA_kanzenkoyou: "完全雇用"
+TR_FRA_kanzenkoyou1: "女性の社会進出"
+TR_FRA_kanzenkoyou2: "職場での権利"
+TR_FRA_kanzenkoyou3: "女性参政権"
 TR_FRA_syousika_mondai: "少子化問題"
+TR_FRA_syousika_mondai_1i: "少子化対策"
+TR_FRA_syousika_mondai_2i: "少子化対策"
+TR_FRA_syousika_mondai_1k: "少子化対策"
+TR_FRA_syousika_mondai_2k: "少子化対策"
+
+TR_FRA_syousika: "異次元の少子化対策"
+TR_FRA_syousika1: "増税"
+TR_FRA_syousika2: "増税"
+TR_FRA_imin: "移民の誘致"
+TR_FRA_imin1: "移民の誘致"
+TR_FRA_imin2: "治安警察"
 TR_FRA_seijiteki_hunsou: "政治的紛争"
 TR_FRA_seijiteki_hunsou1: "鎮圧された政治的紛争"
 TR_jinzaibusoku_kanryou: "人材不足の官僚"
@@ -11,3 +25,5 @@ TR_FRA_kokuminno_situbou1: "外に目を逸らせる"
 TR_FRA_SCpolice: "秘密警察の回復"
 TR_FRA_SCpolice1: "秩序警察"
 TR_FRA_tech: "共産主義科学"
+TR_FRA_work_eiyuu: "労働者英雄"
+TR_FRA_work_eiyuu1: "Vive la France!(フランス万歳！)"
