--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -1137,6 +1137,28 @@
  RUS_fascism_party: "RFP"
  RUS_fascism_party_long: "ロシアファシスト党"
 
+ SER_anarchism_party: "SMPO"
+ SER_anarchism_party_long: "セルビアムスリム連合"
+ SER_syndicalism_party: "SSDP-S"
+ SER_syndicalism_party_long: "セルビア社会民主党-過激派"
+ SER_communism_party: "SSDP"
+ SER_communism_party_long: "セルビア社会民主党"
+ SER_socialism_party: "SPS"
+ SER_socialism_party_long: "セルビア社会主義党"
+ SER_socialdemocratic_party: "NC"
+ SER_socialdemocratic_party_long: "人民社会党"
+ SER_democratic_party: "SDP"
+ SER_democratic_party_long: "セルビア民主党"
+ SER_conservatism_party: "AP"
+ SER_conservatism_party_long: "農業党"
+ SER_neutrality_party: "SKP"
+ SER_neutrality_party_long: "セルビア民族王党派"
+ SER_theocracy_party: "SOC"
+ SER_theocracy_party_long: "セルビア正教会"
+ SER_fascism_party: "SPRP"
+ SER_fascism_party_long: "セルビア人民急進党"
+
+
  ENG_communism_party: "グレートブリテン共産党"
  ENG_socialism_party: "フレートブリテン社会党"
  ENG_socialdemocratic_party: "労働党"
