--- a/localisation/TR_ideas/japanese/TR_SER_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_SER_ideas_l_japanese.yml
@@ -5,3 +5,10 @@
  TR_SER_united_serbians_desc:"セルビアは反動から生まれた珍しい民族国家である。民族主義に傾倒しているが、それによって社会は良い方向へ回っている。"
  TR_SER_muslim:"ムスリム過激派"
  TR_SER_muslim_desc:"アルバニア併合後、国内の多くのムスリムはセルビアの統治に抗議をしている。過激派の対応に政府は追われている。"
+ TR_SER_muslim_1:"ムスリム過激派"
+ TR_SER_muslim_1_desc:"アルバニア併合後、国内の多くのムスリムはセルビアの統治に抗議をしている。過激派の対応に政府は追われている。"
+
+ TR_SER_kings_country_idea:"忠実な王政国家"
+ TR_SER_kings_country_idea_desc:"セルビアの国民はすべて、王に忠誠を誓っている。我々の政治は王のために行われ、王は我々のために統治する。"
+ TR_SER_patriot_country_idea:"狂信的民族国家"
+ TR_SER_patriot_country_idea_desc:"セルビアに生まれたことをすべての国民は喜ぶべきだ。我々は今にもセルビア帝国を復興させ、世界にその力を示すだろう。"
