--- a/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
@@ -66,6 +66,32 @@
  TR_japan.18.t: "首相撃たれるも軽傷で済む"
  TR_japan.18.d: "幸いなことに血盟団の撃った弾丸は首相の内臓を傷つけることなく抜けていたようであり、命に別状はないようだ。"
  TR_japan.18.a: "無事で何よりだ。"
+ TR_japan.22.t: "日本航空の未来"
+ TR_japan.22.d: "同盟国イギリスからの技術支援を受けて生まれた日本航空機の卵は無事に孵化したようだ。これまでの歴史には日本航空に携わってすべての人間によって紡がれてきた一本のか細く、しかし確かな糸が見えてくる。我が国はもはや欧米列強を凌駕する先進的な航空機技術を獲得してのだ。"
+ TR_japan.22.a: "この糸はいつまでも紡がれるだろう"
+ TR_japan.23.t: "帝国陸軍の未来"
+ TR_japan.23.d: "日清戦争以降大規模な陸戦を経験していない陸軍は時代遅れの第二級の陸軍として国際社会から評価されていた。確かに、そのような時代もあったが今やそんな主張をするものは誰一人としていない。研究されつくした陸軍の組織にもはや全世界が注目している。"
+ TR_japan.23.a: "最強陸軍とは輪が帝国軍のことよ"
+ TR_japan.24.t: "海軍の優越"
+ TR_japan.24.d: "健軍以来常に議論されてきた海陸軍の統合であるが今回の会談も物別れに終わった。確かにこれは残念なことだがそれ以上に我が帝国海軍が大日本帝国の中で最も帝国に国益をもたらしていると政治家たちに認識させることができたのである。"
+ TR_japan.24.a: "サイレント・ネイヴィー。それこそが求められているものだ。"
+ TR_japan.25.t: "陸軍の優越"
+ TR_japan.25.d: "健軍以来常に議論されてきた海陸軍の統合であるが今回の会談も物別れに終わった。確かにこれは残念なことだがそれ以上に我が帝国陸軍が大日本帝国の中で最も帝国に国益をもたらしていると政治家たちに認識させることができたのである。"
+ TR_japan.25.a: "戦陣訓を重んじる我が陸軍は帝国に最も奉仕しているのだ"
+ TR_japan.26.t: "兵部省の設立"
+ TR_japan.26.d: "我々は思い出さなければならない。もともと陸軍も海軍も兵部省によって管理されていたのだ。薩長閥の人間により陸軍省と海軍省に分かれたのであるがこの時代に薩長閥の人間に権力などももはやない。兵部省を設立し、内閣府の下に管理することで、陸海軍にもはや政治的影響力は残らないだろう。"
+ TR_japan.26.a: "また一歩。民本主義の理想に近づいた。"　
  TR_japan.28.t: "狙撃されて重傷の犬養総理大臣遂に逝去"
  TR_japan.28.d: "犬養首相は血盟団員から受けた傷が原因となり治療の甲斐なく逝去なされた。犬養首相は血盟団員を前にし、「撃つのはいつでも撃てる。あっちへ行って話を聞こう」と述べ、自室に連れていき「靴でも脱げや、話を聞こう」と語りかけるも「問答無用、撃て」との号令により複数個所から銃撃された模様だ。犬養首相は銃撃後もしばらくの間意識があり「呼んで来い、いまの若いモン、話して聞かせることがある」と最後まで対話の道を志した。彼のような政治家の死は帝国にとって大きな損失だ。また、それに伴い、高橋是清大蔵大臣が臨時に総理職を兼任し新内閣の成立までの管理を行うことが帝国政府より発表された。"
  TR_japan.28.a: "生粋の民本主義者にして大宰相ここに眠る。"
+ TR_japan.29.t: "公害問題"
+ TR_japan.29.d: "近年の日本経済は好調でありいかなる人間もその点を否定することはできないだろう。しかし、環境に配慮しない工場の建設は近隣住民に健康被害を与えていることが分かった。古くには田中正造衆議院議員が当時の明治天皇に直訴をしたことで有名になった足尾銅山鉱毒事件があったが、あれには比較にならない水準で拡大しているようだ。だが、ここで一つ問題が発生する。彼らを救済すべきだろうか？確かに公害問題が痛ましい健康被害をもたらすかもしれないが、公害の対策には工場の建設や生産量に悪影響を及ぼすのである。どちらを優先すべきだろうか？"
+ TR_japan.29.a: "今すぐ対策に乗り出そう"
+ TR_japan.30.t: "不明　これが出たら開発チームにどのような状況で出たのか教えてください"
+ TR_japan.31.t: "大日本帝国の外交方針を決定"
+ TR_japan.31.d: "内政問題を片付け他国に介入できる用意が生まれた大日本帝国だが、我々はどのような立場で国際社会に介入すべきだろうか。"
+ TR_japan.31.a: "他の列強と協力し、国際秩序を守れ！"
+ TR_japan.31.b: "帝国にふさわしい勢力圏を形成する！"
+ TR_japan.33.t: "人種差別撤廃条約を提案"
+ TR_japan.33.d: "帝国は国際社会に責任を持つ列強であり、有色人種唯一の列強国である。我々は彼らを代表して人種差別撤廃条約を提案しなければならない。いかなる人種であろうとも同じ人間である以上差別など許されないのは自明の理だ。外務省は現在の同盟国間でのパワーバランスから認められるだろうとの分析を示している。"
+ TR_japan.33.a: "早速同盟国に提案してみよう。"
