エラー除去

--- a/localisation/TR_musics/TR_music_l_japanese.yml
+++ b/localisation/TR_musics/TR_music_l_japanese.yml
@@ -1,4 +1,3 @@
-﻿
-l_japanese:
+﻿l_japanese:
  Tsareich_MMCT_TITLE:0 "Tsareich Radio"
- 神よツァーリを護り給え_MMCT:0 "神よツァーリを護り給え"
+ maintheme:0 "神よツァーリを護り給え"
