--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -523,9 +523,9 @@
  STATE_522:0 "オーストラリア西部"
  STATE_523:0 "パプア"
  STATE_524:0 "台湾"
- STATE_525:0 "南朝鮮"
+ STATE_525:0 "京畿道"
  STATE_526:0 "沖縄"
- STATE_527:0 "北朝鮮"
+ STATE_527:0 "平安道"
  STATE_528:0 "福岡"
  STATE_529:0 "広島"
  STATE_530:0 "愛媛"
@@ -535,7 +535,7 @@
  STATE_534:0 "石川"
  STATE_535:0 "長野"
  STATE_536:0 "北海道"
- STATE_537:0 "南樺太"
+ STATE_537:0 "南サハリン"
  STATE_538:0 "コキラービル"
  STATE_539:0 "ガボン"
  STATE_540:0 "ルアンダ"
@@ -986,3 +986,9 @@
  STATE_984:0 "長崎"
  STATE_985:0 "Zajecar"
  STATE_986:0 "westbosnia"
+ STATE_987:0 "全羅道"
+ STATE_988:0 "慶尚道"
+ STATE_989:0 "忠清道"
+ STATE_990:0 "江原道"
+ STATE_991:0 "黄海道"
+ STATE_992:0 "咸鏡道"
