--- a/common/national_focus/00-NF作成時の注意.md
+++ b/common/national_focus/00-NF作成時の注意.md
@@ -15,7 +15,7 @@ focus_tree = {
             tag = <任意の国の国家タグ>
         }
     }
-    default = yes
+    default = no
 	reset_on_civilwar = no
 
 	initial_show_position = {
