イギリスと優先度

--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -992,3 +992,7 @@
  STATE_990:0 "江原道"
  STATE_991:0 "黄海道"
  STATE_992:0 "咸鏡道"
+ STATE_993:0 "北ドブロジャ"
+ STATE_994:0 "北スルプスカ"
+ STATE_995:0 "東スルプスカ"
+ STATE_996:0 "南スルプスカ"
