日本革新官僚√NF外枠

--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -18,6 +18,17 @@
  JAP_chikuhei_nakajima: "中島知久平"
  JAP_osachi_hamaguchi: "浜口雄幸"
  JAP_chuji_machida: "町田忠治"
+ JAP_iso_abe: "安部磯雄"
+ JAP_seigo_nakano: "中野正剛"
+ JAP_Nobusuke_Kishi: "岸信介"
+ JAP_Sanzo_Nosaka: "野坂参三"
+ JAP_Kyuichi_Tokuda: "徳田球一"
+ JAP_Hisaichi_Terauchi: "寺内寿一"
+ JAP_Kantoro_Suziki: "鈴木貫太郎"
+ JAP_Toshiro_Obata: "小畑敏四郎"
+ JAP_Himiko: "卑弥呼"
+ JAP_Showa_Emperor: "昭和天皇"
+ JAP_Toyotomi: "豊臣家"
 
 FRA_ludovic_oscar_frossard: "ルドヴィック＝オスカー・フロッサール"
 
