--- a/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
@@ -125,7 +125,7 @@ jap_ARMY_2_2:"陸軍改革２"
 jap_ARMY_2_2_desc:""
 jap_ARMY_2_3:"陸軍改革３"
 jap_ARMY_2_3_desc:""
-jap_ARMY_3_1:"主力の研究"
+jap_ARMY_3_1:"歩兵装備の研究"
 jap_ARMY_3_1_desc:""
 jap_ARMY_3_2:"砲火力の強化"
 jap_ARMY_3_2_desc:""
@@ -194,3 +194,30 @@ jap_pollution_2:"公害問題２"
 jap_pollution_2_desc:""
 jap_pollution_3:"公害問題３"
 jap_pollution_3_desc:""
+
+jap_war: "総力戦"
+jap_war_desc: ""
+jap_war_economy: "戦争経済"
+jap_war_economy_desc: ""
+jap_army_information: "陸軍中野学校"
+jap_army_information_desc: ""
+jap_government_information: "内閣情報室"
+jap_government_information_desc: ""
+jap_army_doc: "陸軍ドクトリンの研究"
+jap_army_doc_desc: ""
+jap_air_doc: "空軍ドクトリンの研究"
+jap_air_doc_desc: ""
+jap_navy_doc: "海軍ドクトリンの研究"
+jap_navy_doc_desc: ""
+jap_No_defeat: "不敗の帝国"
+jap_No_defeat_desc: ""
+jap_Metal_Supply_and_Order: "金属供与令"
+jap_Metal_Supply_and_Order_desc: ""
+jap_student_going_war: "学徒出陣"
+jap_student_going_war_desc: ""
+jap_psychological_mobilization: "精神的動員"
+jap_psychological_mobilization_desc: ""
+jap_Kamikaze: "神風を吹かせ"
+jap_Kamikaze_desc: ""
+jap_Operation_Ketsu: "決合作戦"
+jap_Operation_Ketsu_desc: ""
