--- a/localisation/japanese/factions_l_japanese.yml
+++ b/localisation/japanese/factions_l_japanese.yml
@@ -107,4 +107,7 @@
  DEN_nordic_cooperation_alliance: "北欧企業同盟"
  DEN_northern_national_front: "北方国民戦線"
  DEN_northern_security_pact: "北方安全保障条約"
-Republic_of_China: "中華民国"
+ Republic_of_China: "中華民国"
+ Pacific_Pact: "太平洋条約"
+ security_diamond: "セキュリティ・ダイヤモンド"
+ jap_Greater_East_Asian_Co-prosperity_Sphere_concept: "大東亜共栄圏"
