--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -1174,3 +1174,7 @@
  JAP_Innovation_Bureaucracy_long: "革新官僚"
  JAP_socialism_party_r: "日本共産党"
  JAP_socialism_party_r_long: "ルクセンブルク主義日本共産党"
+ JAP_Toyotomi_family: "豊臣家"
+ JAP_Toyotomi_family_long: "豊臣家"
+ JAP_Yamataikoku: "邪馬台国"
+ JAP_Yamataikoku_long: "邪馬台国"
